// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`cta-button > renders basic cta button 1`] = `
"<a
  class="cta-btn"
  href="https://www.ebay.com"
>
  <span
    class="cta-btn__cell"
  >
    <span>
      CTA Button
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--24"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 24 24"
      >
        <path
          d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
        />
      </symbol>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
  </span>
</a>"
`;

exports[`cta-button > renders fluid cta button 1`] = `
"<a
  class="cta-btn cta-btn--fluid"
  href="https://www.ebay.com"
>
  <span
    class="cta-btn__cell"
  >
    <span>
      CTA Button
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--24"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 24 24"
      >
        <path
          d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
        />
      </symbol>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
  </span>
</a>"
`;

exports[`cta-button > renders large cta button 1`] = `
"<a
  class="cta-btn cta-btn--large"
  href="https://www.ebay.com"
>
  <span
    class="cta-btn__cell"
  >
    <span>
      CTA Button
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--24"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 24 24"
      >
        <path
          d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
        />
      </symbol>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
  </span>
</a>"
`;

exports[`cta-button > renders truncated cta button 1`] = `
"<a
  class="cta-btn cta-btn--truncated"
  href="https://www.ebay.com"
>
  <span
    class="cta-btn__cell"
  >
    <span>
      CTA Button
    </span>
    <svg
      aria-hidden="true"
      class="icon icon--24"
    >
      <symbol
        id="GENERATED-0"
        viewBox="0 0 24 24"
      >
        <path
          d="m21.71 11.29-8-8a1.004 1.004 0 0 0-1.42 1.42l6.3 6.29H3a1 1 0 0 0 0 2h15.59l-6.3 6.29a1.001 1.001 0 0 0 0 1.42 1.001 1.001 0 0 0 1.42 0l8-8a1.001 1.001 0 0 0 0-1.42Z"
        />
      </symbol>
      <use
        href="#icon-arrow-right-24"
      />
    </svg>
  </span>
</a>"
`;
